[package]
name = 'whl'
version = '0.1.0'
authors = ['Neeraj Jaiswal <neerajj85@gmail.com>']
edition = '2018'
include = ["src/**/*"]

[dependencies]
actix-rt = '1.0.0'
serde_derive = '1.0'
serde = '1.0'
serde_yaml = '0.8'
serde_json = '1.0'

[dependencies.actix-web]
version = '3.0.0-alpha.1'
features = ['rustls']

[dependencies.awc]
version = '2.0.0-alpha.1'
features = ['rustls']

[profile.release]
lto = true
